*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.26 ===
* Fixed bun in tk::ListBox widget which didn't allow to scroll the list box
  when using keyboard keys.
* Implemented shortcut handling mechancs by tk::Window.
* Small bugfix in LedMeterChannel related to header display.
* Updated build scripts.

=== 1.0.25 ===
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.24 ===
* Improved ListBox behaviour relative to the item size.
* Bugfixes in tk::ListBox related to item creation, deletion and selection.
* Added text estimation suppot for tk::Button widget. 
* Added aggregate size computation (enabled by default) for tk::TabControl widget.
* Fixed bug in bookmak editor (set first/last actions) of the tk::FileDialog widget.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.23 ===
* Added header support by tk::LedMeterChannel.
* Added header support by tk::LedMeter.
* Implemented SLOT_MOUSE_POINTER slot for overriding mouse pointer.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.22 ===
* Updated module versions in dependencies.

=== 1.0.21 ===
* Added empty text property for edit.
* Added text size estimation feature to the tk::Label widget.
* Fixed illegal memory access when destroying Box, Grid and Menu widgets.
* Added tab.pointer property to the tk::TabControl.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.20 ===
* Added possibility to control the value set to RangeFloat and Float properties.
* Fixed illegal memory access when destroying Box, Grid and Menu widgets.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.19 ===
* Optimized work with atoms.
* Many code updates that could cause potential problems related to using another
  decimal point for floating-point number formatting.